# Kraken

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .readthedocs.yml  .swiftformat  Bundler.toml  CMakeLists.txt  COPYING  ExampleScene.usda  GNUmakefile  Kraken.usda  Package.resolved  Package.swift  README.md  TestUI.usda  cloudbuild.yml  make.bat  readme.rst  sample.galah  vulkaninfo.html
source/kraken/: CMakeLists.txt  kraken.h
source/kraken/ChaosEngine/: Kraken.Foundation.App.h  Kraken.UIKit.UIEvent.h  Kraken.UIKit.UIResponder.h  Kraken.UIKit.UIScreen.h  Kraken.UIKit.UIView.h
source/kraken/KrakenOS/: CMakelists.txt  Kraken.OS.Defines.hpp  Kraken.OS.HeaderBridge.hpp  Kraken.OS.Private.hpp  Kraken.OS.System.hpp  Kraken.OS.Window.hpp  Kraken.OS.hpp
source/kraken/anchor/: ANCHOR_Rect.h  ANCHOR_api.h  ANCHOR_buttons.h  ANCHOR_curve_edit.h  ANCHOR_debug_codes.h  ANCHOR_display_manager.h  ANCHOR_event.h  ANCHOR_event_consumer.h  ANCHOR_event_manager.h  ANCHOR_freetype.h  ANCHOR_gizmo.h  ANCHOR_gradient.h  ANCHOR_graph_editor.h  ANCHOR_internal.h  ANCHOR_modifier_keys.h  ANCHOR_path-api.h  ANCHOR_rectpack.h  ANCHOR_sequencer.h  ANCHOR_system.h  ANCHOR_system_paths.h  ANCHOR_textedit.h  ANCHOR_truetype.h  ANCHOR_types.h  ANCHOR_version.h  ANCHOR_window.h  ANCHOR_window_manager.h  ANCHOR_zoom_slider.h  CMakeLists.txt  module.map  pch.h
source/kraken/covakernel/: CKE_api.h  CKE_context.h  CKE_icons.h  CKE_main.h  CKE_screen.h  CKE_space.h  CKE_utils.h  CKE_workspace.h  CMakeLists.txt
source/kraken/covalib/: CLI_api.h  CLI_assert.h  CLI_icons.h  CLI_math_inline.h  CLI_path_utils.h  CLI_string_utils.h  CLI_time.h  CLI_utildefines.h  CMakeLists.txt
source/kraken/datatoc/: CMakeLists.txt  datatoc_icon.c  datatoc_icon_split.py
source/kraken/draw/: CMakeLists.txt  DRW_engine.h
source/kraken/editors/: CMakeLists.txt
source/kraken/eigen/: CMakeLists.txt
source/kraken/gpu/: CMakeLists.txt  GPU_batch.h  GPU_batch_presets.h  GPU_capabilities.h  GPU_common.h  GPU_common_types.h  GPU_context.h  GPU_debug.h  GPU_framebuffer.h  GPU_immediate.h  GPU_immediate_util.h  GPU_index_buffer.h  GPU_init_exit.h  GPU_material.h  GPU_matrix.h  GPU_platform.h  GPU_primitive.h  GPU_shader.h  GPU_shader_shared.h  GPU_shader_shared_utils.h  GPU_state.h  GPU_storage_buffer.h  GPU_texture.h  GPU_uniform_buffer.h  GPU_vertex_buffer.h  GPU_vertex_format.h  GPU_viewport.h
source/kraken/imbuf/: CMakeLists.txt  IMB_colormanagement.h  IMB_imbuf.h  IMB_metadata.h  IMB_thumbs.h
source/kraken/krakernel/: CMakeLists.txt  KKE_ID.h  KKE_api.h  KKE_appdir.h  KKE_appdir.hh  KKE_autoexec.h  KKE_colortools.h  KKE_context.h  KKE_cryptomatte.h  KKE_cryptomatte.hh  KKE_global.h  KKE_icons.h  KKE_idprop.h  KKE_idtype.h  KKE_kraken_prim.h  KKE_lib_id.h  KKE_main.h  KKE_material.h  KKE_precomp.cpp  KKE_precomp.h  KKE_report.h  KKE_robinhood.h  KKE_scene.h  KKE_screen.h  KKE_space.h  KKE_usdfile.hh  KKE_utils.h  KKE_version.h  KKE_workspace.h
source/kraken/krakfont/: CMakeLists.txt  KRF_api.h
source/kraken/kraklib/: CMakeLists.txt  KLI_alloca.h  KLI_allocator.hh  KLI_api.h  KLI_array.h  KLI_array.hh  KLI_asan.h  KLI_assert.h  KLI_bitmap.h  KLI_compiler_attrs.h  KLI_compiler_compat.h  KLI_compiler_typecheck.h  KLI_dynstr.h  KLI_easing.h  KLI_fileops.h  KLI_fileops.hh  KLI_fileops_types.h  KLI_float4x4.hh  KLI_function_ref.hh  KLI_gsqueue.h  KLI_hash.h  KLI_hash.hh  KLI_hash_mm2a.h  KLI_hash_mm3.h  KLI_hash_tables.hh  KLI_icons.h  KLI_index_range.hh  KLI_kraklib.h  KLI_lazy_threading.hh  KLI_link_utils.h  KLI_linklist.h  KLI_listbase.h  KLI_listbase_wrapper.hh  KLI_map.hh  KLI_map_slots.hh  KLI_math.h  KLI_math_base.h  KLI_math_base.hh  KLI_math_base_safe.h  KLI_math_bits.h  (+40 more)
source/kraken/krakloader/: CMakeLists.txt  KLO_readfile.h
source/kraken/luxo/: CMakeLists.txt  LUXO_access.h  LUXO_define.h  LUXO_enum_items.h  LUXO_enum_types.h  LUXO_main.h  LUXO_runtime.h  LUXO_types.h
source/kraken/microsoft/: App.xaml.h  MainPage.h  MainWindow.h  UIEvent.h  UIResponder.h
source/kraken/python/: CMakeLists.txt  KPY_extern.h  KPY_extern_clog.h
source/kraken/render/: CMakeLists.txt  RE_engine.h  RE_engine.swift
source/kraken/server/: CMakeLists.txt  SERVER_api.h
source/kraken/universe/: CMakeLists.txt  UNI_access.h  UNI_api.h  UNI_area.h  UNI_context.h  UNI_default_tables.h  UNI_factory.h  UNI_file.h  UNI_object.h  UNI_operator.h  UNI_path_defaults.h  UNI_pixar_utils.h  UNI_region.h  UNI_scene.h  UNI_screen.h  UNI_space_types.h  UNI_system.h  UNI_types.h  UNI_userpref.h  UNI_window.h  UNI_wm_types.h  UNI_workspace.h  USD_ID.h  USD_ID_enums.h  USD_action.h  USD_api.h  USD_area.h  USD_collection.h  USD_color_types.h  USD_context.h  USD_curveprofile_types.h  USD_customdata_types.h  USD_default_tables.h  USD_defs.h  USD_factory.h  USD_file.h  USD_lights.h  USD_linestyles.h  USD_listBase.h  USD_mask.h  (+24 more)
source/kraken/wm/: CMakeLists.txt  WM_api.h  WM_cursors.h  WM_cursors_api.h  WM_debug_codes.h  WM_dragdrop.h  WM_draw.h  WM_event_system.h  WM_files.h  WM_init_exit.h  WM_inline_tools.h  WM_keymap.h  WM_menu_type.h  WM_msgbus.h  WM_operators.h  WM_reports.h  WM_tokens.h  WM_tooltip.h  WM_window.h  WM_window.hh
test/: CMakeLists.txt
test/plugs/: plugs_test.cpp
test/tester/: test_main.cpp
wabi/: CMakeLists.txt  module.map  wabi.h
wabi/base/: CMakeLists.txt
wabi/base/arch/: CMakeLists.txt  align.cpp  align.h  api.h  assumptions.cpp  attributes.cpp  attributes.h  buildMode.h  daemon.cpp  daemon.h  debugger.cpp  debugger.h  defines.h  demangle.cpp  demangle.h  env.cpp  env.h  errno.cpp  errno.h  error.cpp  error.h  export.h  fileSystem.cpp  fileSystem.h  function.cpp  function.h  functionLite.h  hash.cpp  hash.h  hints.h  initConfig.cpp  inttypes.h  library.cpp  library.h  mallocHook.cpp  mallocHook.h  math.h  pch.h  pragmas.h  regex.cpp  (+17 more)
wabi/base/gf/: CMakeLists.txt  api.h  bbox3d.cpp  bbox3d.h  camera.cpp  camera.h  declare.h  frustum.cpp  frustum.h  gamma.cpp  gamma.h  half.cpp  half.h  homogeneous.cpp  limits.h  (+168 more)
wabi/imaging/: CMakeLists.txt
wabi/usd/: CMakeLists.txt
wabi/usdImaging/: CMakeLists.txt
(+5559 files in other folders)
