add_subdirectory(ar)
add_subdirectory(kind)
add_subdirectory(sdf)
add_subdirectory(ndr)
add_subdirectory(gdr)
add_subdirectory(sdr)
add_subdirectory(pcp)
add_subdirectory(usd)
add_subdirectory(usdGeom)
add_subdirectory(usdVol)
add_subdirectory(usdMedia)
add_subdirectory(usdShade)
add_subdirectory(usdLux)
add_subdirectory(usdRender)
add_subdirectory(usdHydra)
add_subdirectory(usdRi)
add_subdirectory(usdSkel)
add_subdirectory(usdUI)
add_subdirectory(usdUtils)
add_subdirectory(plugin)

if(WITH_USD_TOOLKIT)
  add_subdirectory(bin)
endif()
