
# add_subdirectory(code)
add_subdirectory(interface)
add_subdirectory(object)
add_subdirectory(screen)
add_subdirectory(space_api)
add_subdirectory(space_file)
add_subdirectory(space_userpref)
add_subdirectory(space_view3d)
add_subdirectory(util)
# add_subdirectory(etcher)
# add_subdirectory(space_nodes)

add_subdirectory(datafiles)